--- a/app/src/main/res/layout/activity_increase_sort.xml
+++ b/app/src/main/res/layout/activity_increase_sort.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/pikaqiu2"
     tools:context=".IncreaseSort"
-    android:orientation="vertical"
-
     >
 
     <Button
@@ -18,45 +17,59 @@
         android:background="#00000000"
         />
 
-    <Button
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textUri"
-        android:background="@mipmap/increasepicture"
-        android:layout_gravity="center"
-        android:alpha="0.5"
-        android:layout_marginTop="60dp"
-        ></Button>
-
-    <EditText
-        android:id="@+id/sortname"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingLeft="5dp"
-        android:textSize="40sp"
-        android:layout_marginTop="30dp"
-        android:hint="请输入分类类名"
-        android:textColorHint="@color/sortpagetextcolor"
-        android:background="@drawable/hot_word_tag_shape"
-        android:alpha="0.9">
+        android:orientation="horizontal"
+        android:layout_marginBottom="40dp"
+        android:layout_above="@id/submit">
 
-    </EditText>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/address"
+            android:layout_gravity="center"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_marginLeft="25dp"
+            android:src="@mipmap/increasepicture"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp"
+            ></de.hdodenhof.circleimageview.CircleImageView>
+
+        <EditText
+            android:id="@+id/sortname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/hot_word_tag_shape"
+            android:gravity="center"
+            android:hint="请输入分类类名"
+            android:paddingLeft="5dp"
+            android:textColor="#D1D1D1"
+            android:textSize="30sp">
+
+        </EditText>
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/submit"
+        android:elevation="15dp"
+        android:translationZ="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/hot_word_tag_shape"
+        android:backgroundTint="@color/sortpagebgcolor"
         android:foreground="#00000000"
-        android:layout_gravity="center"
         android:text="提交"
         android:textColorHint="@color/sortpagetextcolor"
         android:textSize="20sp">
 
     </Button>
 
-</LinearLayout>
+</RelativeLayout>
