--- a/app/src/main/res/layout/activity_sortpage.xml
+++ b/app/src/main/res/layout/activity_sortpage.xml
@@ -24,7 +24,7 @@ android:orientation="vertical">
             android:gravity="center"
             android:layout_centerInParent="true"
             android:text="分类"
-            android:textColor="@android:color/holo_blue_light"
+            android:textColor="@android:color/black"
             android:textSize="32sp">
 
         </TextView>
