--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -11,12 +11,15 @@
         android:layout_margin="20dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/kind_shape"
-        android:elevation="15dp"
+        android:elevation="10dp"
+        android:translationZ="5dp"
         android:paddingStart="30dp"
         android:paddingTop="40dp"
         android:paddingEnd="30dp"
         android:paddingBottom="40dp"
-        android:text="蔡徐坤"
+        android:alpha="0.8"
+        android:text=""
         android:textAlignment="center"
+        android:textColor="@color/smssdk_black"
         android:textSize="25sp" />
 </LinearLayout>
